--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nu portfolio</title>
-</head>
-<body>
-    <h1>Nu portfolio</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+    />
+    <title>Sittichai Chaikamol</title>
+  </head>
+  <body>
+    <header class="header">
+      <div  class="d-flex flex-column">
+        <div class="profile">
+         <a href=""><img class="profile-img img-fluid rounded-circle" src="assets/imgs/portfolio.png" alt="" /></a> 
+          <h1 class="mt-3"><a href="index.html">Sittichai Chaikamol</a></h1>
+          <h1 class="text-center mt-3">Web Developer</h1>
+
+        </div>
+        <nav id="nav" class="nav-menu navbar">
+          <ul>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Works</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="social-links mt-3 text-center">
+        <div class="social github">        
+          <a href="#" class="fa fa-github "></a>
+        </div>
+        <div class="social linkedin">        
+          <a href="#" class="fa fa-linkedin"></a>
+        </div>
+        <div class="social facebook">       
+           <a href="#" class="fa fa-facebook"></a>
+        </div>
+        <div class="social twitter">       
+           <a href="#" class="fa fa-twitter"></a>
+        </div>
+        <div class="social instagram">        
+          <a href="#" class="fa fa-instagram"></a>
+        </div>
+  
+    </header>
+
+    </div>
+    <footer></footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
