removed profile image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header class="text-center">
     <div class="">
       <div class="profile">
-        <a href=""><img class="img-fluid rounded-circle" src="assets/imgs/portfolio.png" alt="" /></a>
+        <a href=""><img class="img-fluid rounded-circle" src="assets/imgs/nu.png" alt="" /></a>
         <h1 class="mt-3"><a href="index.html">Sittichai Chaikamol</a></h1>
         <h1 class=" mt-3">Web Developer</h1>
 
