--- a/index.html
+++ b/index.html
@@ -1,76 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/reset.css">
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <!-- CSS only -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet" />
-  <title>Sittichai Chaikamol</title>
-</head>
+    <!-- CSS only -->
+    <!-- <link rel="stylesheet" href="assets/css/reset.css" /> -->
+    <!-- <link rel="stylesheet" href="assets/css/style.css" /> -->
+    <link rel="stylesheet" href="assets/css/mystyle.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Sittichai Chaikamol</title>
+  </head>
 
-<body>
-<header class="text-center">
-    <div class="">
+  <body class="main-content">
+    <header class="header">
       <div class="profile">
-        <a href=""><img class="img-fluid rounded-circle" src="assets/imgs/nu.png" alt="" /></a>
-        <h1 class="mt-3"><a href="index.html">Sittichai Chaikamol</a></h1>
-        <h1 class=" mt-3">Web Developer</h1>
-
+        <img src="./assets/imgs/nu.png" alt="">
       </div>
-      <div class="lists">
-        <ul>
-          <hr>
-          <li><a href="#">About Me</a></li><hr>
-          <li><a href="#">Skills</a></li><hr>
-          <li><a href="#">Works</a></li><hr>
-          <li><a href="#">Contact</a></li><hr>
-        </ul>
+      <div class="my-lists">
+        <hr>
+        <div class="control control-1 " data-id="nu">
+          <a href="#section-1"><i class="fa-solid fa-house-user"></i>Nu</a>
+        </div>
+        <hr>
+        <div class="control control-2" data-id="about">
+          <a href="#section-2"><i class="fa-solid fa-user"></i>About</a>
+        </div>
+        <hr>
+        <div class="control control-3" data-id="portfolio">
+          <a href="#section-3"><i class="fa-solid fa-briefcase"></i>Portfolio</a>
+        </div>
+        <hr>
+        <div class="control control-4" data-id="contact">
+          <a href="#section-4"><i class="fa-solid fa-envelope"></i>Contact</a>
+        </div>
+        <hr>
       </div>
-    </div>
-    <div class="social-links mt-3 text-center">
-      <div class="social github">
-        <a href="#" class="fa fa-github "></a>
+      <div class="socail-links">
+        <div class="socail socail1"><a href="https://github.com/Sittichai-nu"><i class="fa-brands fa-github"></i></a></div>
+        <div class="socail socail2"><a href="https://www.linkedin.com/in/sittichai-c-451165196/"><i class="fa-brands fa-linkedin-in"></i></i></a></i></div>
+        <div class="socail socail3"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a></div>
+        <div class="socail socail4"><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></div>
+        <div class="socail socail5"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></div>
       </div>
-      <div class="social linkedin">
-        <a href="#" class="fa fa-linkedin"></a>
-      </div>
-      <div class="social facebook">
-        <a href="#" class="fa fa-facebook"></a>
-      </div>
-      <div class="social twitter">
-        <a href="#" class="fa fa-twitter"></a>
-      </div>
-      <div class="social instagram">
-        <a href="#" class="fa fa-instagram"></a>
-      </div>
-    </div>
-  </header>
-  <div class="navAndContent">
-    <nav class="nav">
-      <span><a href="">Learning Source</a></span>
-    </nav>
-    <div class="cont">
-      <h1 class="text-center">Comming Soon</h1>
-    </div>
-  </div>
-
-
-
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-    crossorigin="anonymous"></script>
-  <script src="assets/js/script.js"></script>
-</body>
-
+    </header>
+    <main class="main">
+      <section class="section section-1 nu" id="nu" >
+        <div class="my-name">
+          <h1 class="name">Hi, I'm <span>Nu</span>A Front End Web Developer</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste labore asperiores, repudiandae, nihil ex molestias explicabo officiis ipsum, quasi ipsam quia. Odio repudiandae dolorem exercitationem, quo culpa incidunt provident facere!</p>
+        </div>
+      </section>
+      <section class="section section-2 about" id="about">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora architecto, fuga vitae iure aliquam modi fugit. Obcaecati explicabo velit repudiandae, nulla, eveniet suscipit debitis nemo error dolores libero tenetur quo.</section>
+      <section class="section section-3 portfolio" id="portfolio">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eius veniam laboriosam architecto ipsum fugiat voluptate quae, consequuntur sit consequatur possimus inventore earum ad soluta accusantium aut dolor unde rerum.
+      </section>
+      <section class="section section-4 contact" id="contact">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iure sapiente in facilis enim eum temporibus libero provident maxime nulla. Maxime ut quaerat sit labore libero quas sequi earum porro.</section>
+    </main>
+    <script  src="assets/js/script.js"></script>
+  </body>
 </html>
