updated active tab

--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
       </div>
       <div class="my-lists">
         <hr>
-        <div class="control control-1 " data-id="nu">
-          <a href="#section-1"><i class="fa-solid fa-house-user"></i>Nu</a>
+        <div class="control control--1 " data-tab="1">
+          <a href="" ><i class="fa-solid fa-house-user"></i>Nu</a>
         </div>
         <hr>
-        <div class="control control-2" data-id="about">
-          <a href="#section-2"><i class="fa-solid fa-user"></i>About</a>
+        <div class="control control--2" data-tab="2">
+          <a href="" ><i class="fa-solid fa-user"></i>About</a>
         </div>
         <hr>
-        <div class="control control-3" data-id="portfolio">
-          <a href="#section-3"><i class="fa-solid fa-briefcase"></i>Portfolio</a>
+        <div class="control control--3" data-tab="3">
+          <a href=""><i class="fa-solid fa-briefcase" ></i>Portfolio</a>
         </div>
         <hr>
-        <div class="control control-4" data-id="contact">
-          <a href="#section-4"><i class="fa-solid fa-envelope"></i>Contact</a>
+        <div class="control control--4" data-tab="4">
+          <a href=""  ><i class="fa-solid fa-envelope"></i>Contact</a>
         </div>
         <hr>
       </div>
@@ -58,17 +58,17 @@
       </div>
     </header>
     <main class="main">
-      <section class="section section-1 nu" id="nu" >
+      <section class="section operetor__section--1 nu" id="nu" >
         <div class="my-name">
           <h1 class="name">Hi, I'm <span>Nu</span>A Front End Web Developer</h1>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste labore asperiores, repudiandae, nihil ex molestias explicabo officiis ipsum, quasi ipsam quia. Odio repudiandae dolorem exercitationem, quo culpa incidunt provident facere!</p>
         </div>
       </section>
-      <section class="section section-2 about" id="about">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora architecto, fuga vitae iure aliquam modi fugit. Obcaecati explicabo velit repudiandae, nulla, eveniet suscipit debitis nemo error dolores libero tenetur quo.</section>
-      <section class="section section-3 portfolio" id="portfolio">
+      <section class="section operetor__section--2 about" id="about">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora architecto, fuga vitae iure aliquam modi fugit. Obcaecati explicabo velit repudiandae, nulla, eveniet suscipit debitis nemo error dolores libero tenetur quo.</section>
+      <section class="section operetor__section--3 portfolio" id="portfolio">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eius veniam laboriosam architecto ipsum fugiat voluptate quae, consequuntur sit consequatur possimus inventore earum ad soluta accusantium aut dolor unde rerum.
       </section>
-      <section class="section section-4 contact" id="contact">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iure sapiente in facilis enim eum temporibus libero provident maxime nulla. Maxime ut quaerat sit labore libero quas sequi earum porro.</section>
+      <section class="section operetor__section--4 contact" id="contact">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iure sapiente in facilis enim eum temporibus libero provident maxime nulla. Maxime ut quaerat sit labore libero quas sequi earum porro.</section>
     </main>
     <script  src="assets/js/script.js"></script>
   </body>
