Removed email from the contact page

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <span>Email</span>
               </div>
               <p>
-                <span>Nu.chai@yahoo.com</span>
+                <span>email@me.com</span>
               </p>
             </div>
    
