--- a/index.html
+++ b/index.html
@@ -276,8 +276,15 @@
               </p>
             </div>
    
-            
-            </div>
+            <!-- <div class="contact-item">
+              <div class="icon">
+                <i class="fas fa-globe-africa"></i>
+                <span>Languages</span>
+              </div>
+              <p>
+                <span>English, Thai</span>
+              </p>
+            </div> -->
           </div>
 
         </div>
